--- a/wp-content/themes/curso/css/style.css
+++ b/wp-content/themes/curso/css/style.css
@@ -41,8 +41,10 @@ h4{ font-size: 18px; margin-top: 0; }
 /* Slider */
 .recent-post-slider.design-2 .post-image-bg{ min-height: 700px; }
 .recent-post-slider.design-2 .post-content-left{ display: flex; align-items: center; }
-.recent-post-slider .slick-dots li button { border: 0 !important; border-radius: 0 !important; width: 29px !important; height: 8px !important;}
+.recent-post-slider .slick-dots li button { border-radius: 0 !important; width: 29px !important; height: 8px !important;}
 .recent-post-slider .slick-dots li.slick-active button { background: #b9121b !important;}
+.recent-post-slider .slick-dots { text-align: center; width: 100%; }
+.recent-post-slider.design-2 .slick-prev { right: auto !important; }
 
 /* Services */
 .services{ background: #4c1b1b; padding: 25px 0; color: #fefefe; }
