--- a/wp-content/themes/curso/style.css
+++ b/wp-content/themes/curso/style.css
@@ -5,5 +5,8 @@ Author: Kiane L. Casagrande
 Author URI: http://wordpress.localhost/
 Description: Tema criado para aprender a criar temas no Wordpress.
 Version: 1.0
-Tags: two-columns, left-sidebar, custom-header, custom-menu, custom-logo, blog 
+Tags: two-columns, left-sidebar, custom-header, custom-menu, custom-logo, blog
+Text Domain: wpcurso
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
